--- a/daily/static/daily/daily.css
+++ b/daily/static/daily/daily.css
@@ -1,3 +1,8 @@
+#show_projects {
+  width: 20%;
+  display: inline-block;
+}
+
 tr#hidden-tmp-row {
   display: none;
 }
@@ -53,6 +58,7 @@ h3 {
 }
 .proj-id-td {
   visibility: hidden;
+  display: none;
 }
 .no-border {
   border: 0px;
