Make ongoing projects yellow, completed green

--- a/daily/static/daily/daily.css
+++ b/daily/static/daily/daily.css
@@ -3,6 +3,13 @@
   display: inline-block;
 }
 
+.INCMP {
+  background: lightyellow;
+}
+
+.CMP {
+  background: darkseagreen;
+}
 tr#hidden-tmp-row {
   display: none;
 }
