Add date url + logging in settings.py

--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <head>
 
+      {% load static %}
      <script type="text/javascript" src="{% static 'daily/jquery.min.js' %}"></script>
      <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -14,7 +14,7 @@
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/daily.css' %}"/>
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/trash.css' %}"/>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="{% static 'daily/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
+    <link href="{% static 'daily/ie10-viewport-bug-workaround.css' %}" rel="stylesheet"/>
 
 
       <!-- Bootstrap theme -->
