--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -43,13 +43,13 @@
           <tbody>
             <tr>
               <td class="proj-id-td">  </td>
-              <td>Project</td>
-              <td>Employees</td>
-              <td>Times</td>
-              <td>Vehicles</td>
-              <td>Phones</td>
+              <td class="table-header">Project</td>
+              <td class="table-header">Employees</td>
+              <td class="table-header">Times</td>
+              <td class="table-header">Vehicles</td>
+              <td class="table-header">Phones</td>
               {% if user.is_authenticated %}
-              <td>Done</td>
+              <td class="table-header">Done</td>
               {% endif %}
             </tr>
             {% if schedule %}
