--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href= "{% static 'css/category.css' %}"/>
 {% endblock %}
 {% block content %}
-      <div class="container">
+      <div class="container date-container">
       <h1></h1>
         <div class="date-div starter-template">
       <form id="datepicker-form" method='POST' action="{% url 'schedule' %}">
