Remove top margin in sources.

--- a/daily/static/css/daily.css
+++ b/daily/static/css/daily.css
@@ -153,8 +153,8 @@ h3 {
   //margin: 100px auto;
   order: 3;
   //position: absolute;
-  left: 85%;
-  top: 50px;
+  //left: 85%;
+  //top: 50px;
   width: 10%;
   height: 100%;  
 }
